--- a/tools/Rmd/build_lookup.Rmd
+++ b/tools/Rmd/build_lookup.Rmd
@@ -17,6 +17,7 @@ library(tidyverse)
 library(scales)
 library(bigsnpr) # for seq_log
 library(data.table)
+library(cowplot)
 
 knitr::opts_knit$set(root.dir="~/Data/momentspp/paper_1/study/")
 ```
@@ -33,8 +34,8 @@ Ts <- paste(0, 4000, 24000, 100000, sep=";") # from present (0) to past, in gene
 uL <- 1e-8
 uR <- 1e-8
 # rounding is required so that directory names don't diverge due to precision
-r <- c(1e-8, 1e-3, 1e-2, 1e-1)#round(c(0, seq_log(1e-8, 1e-1, 71)), digits=12)
-s <- (-2e-3)#round(-c(0, seq_log(1e-6, 1e-3, 3*11+1)), digits=12)
+r <- round(c(0, seq_log(1e-8, 1e-1, 71)), digits=12)
+s <- round(-c(0, seq_log(1e-6, 1e-3, 3*11+1)), digits=12)
 
 params <- setDT(crossing(Ns, Ts, r, s, uL, uR))
 n_models <- nrow(params)
@@ -329,27 +330,29 @@ lookup_tbl$piN_piS <- lookup_tbl$Hl / lookup_tbl$Hr
 fwrite(lookup_tbl, "lookup_tbl.csv.gz", compress="gzip") 
 ```
 
-```{r, lookup, include=F, eval=T, results=F, message=F, warning=F}
+```{r, vizualization, include=F, eval=T, results=F, message=F, warning=F}
 
-# viz
-r_vals <- lookup_r
+lookup_tbl <- fread("lookup_tbl.csv.gz")
+scaleFUN <- function(x) sprintf("%.3f", x)
+
+r_vals <- unique(lookup_tbl$r)
 p1 <- ggplot(data=filter(lookup_tbl, s==-1e-3, r %in% r_vals),
              aes(x=Generation, y=B^1000, color=as.factor(r))) + 
-      theme_bw() + geom_line(linewidth=1.25) + 
+      theme_bw() + geom_line(linewidth=1.25) + facet_wrap(~N1) +
       scale_x_continuous(breaks=pretty_breaks()) +
-      scale_y_continuous(breaks=pretty_breaks()) +
-      labs(title=NULL, x="Gen", y="B (s=-1e-3)") +
+      scale_y_continuous(breaks=pretty_breaks(), labels=scaleFUN) +
+      labs(title=NULL, x=NULL, y="B (s=-1e-3)") +
         theme(axis.title=element_text(size=16), 
               axis.text=element_text(size=12), 
               axis.text.x=element_blank(), 
               axis.text.y=element_text(size=12),
-              legend.position="bottom")
+              legend.position="none")
   
 p2 <- ggplot(data=filter(lookup_tbl, s==-1e-4, r %in% r_vals),
-             aes(x=Generation, y=B, color=as.factor(r))) + 
-      theme_bw() + geom_line(linewidth=1.25) + 
+             aes(x=Generation, y=B^1000, color=as.factor(r))) + 
+      theme_bw() + geom_line(linewidth=1.25) + facet_wrap(~N1) +
       scale_x_continuous(breaks=pretty_breaks()) +
-      scale_y_continuous(breaks=pretty_breaks()) +
+      scale_y_continuous(breaks=pretty_breaks(), labels=scaleFUN) +
       labs(title=NULL, x=NULL, y="B (s=-1e-4)") +
       theme(axis.title=element_text(size=16), 
             axis.text=element_text(size=12), 
@@ -358,11 +361,11 @@ p2 <- ggplot(data=filter(lookup_tbl, s==-1e-4, r %in% r_vals),
             legend.position="none")
 
 p3 <- ggplot(data=filter(lookup_tbl, s==-1e-5, r %in% r_vals),
-             aes(x=Generation, y=B, color=as.factor(r))) + 
-      theme_bw() + geom_line(linewidth=1.25) + 
+             aes(x=Generation, y=B^1000, color=as.factor(r))) + 
+      theme_bw() + geom_line(linewidth=1.25) + facet_wrap(~N1) +
       scale_x_continuous(breaks=pretty_breaks()) +
-      scale_y_continuous(breaks=pretty_breaks()) +
-      labs(title=NULL, x="Generations ago", y="B (s=-1e-5)") +
+      scale_y_continuous(breaks=pretty_breaks(), labels=scaleFUN) +
+      labs(title=NULL, x="Generations since size change", y="B (s=-1e-5)") +
       theme(axis.title=element_text(size=16), 
             axis.text=element_text(size=12), 
             axis.text.x=element_text(size=12), 
@@ -373,6 +376,7 @@ p3 <- ggplot(data=filter(lookup_tbl, s==-1e-5, r %in% r_vals),
   
 cp <- plot_grid(p1, p2, p3, ncol=1, rel_heights=c(1, 1, 1.35), align='v')
 cp
+save_plot("two-locus_time.pdf", cp, base_height=10, base_width=14)
 
 p1 <- ggplot(data=filter(lookup_tbl, s==-1e-3, r==1e-8),
              aes(x=Generation, y=Hl)) + 
@@ -412,18 +416,4 @@ p3 <- ggplot(data=filter(lookup_tbl, s==-1e-5, r==1e-8),
 
 cp <- plot_grid(p1, p2, p3, ncol=1, rel_heights=c(1, 1, 1.35), align='v')
 cp
-
-p <- ggplot(data=filter(lookup_tbl, r==1e-8, s == -1e-3), aes(x=Na, y=B)) + 
-      geom_point() + theme_bw() + geom_line() + #facet_wrap(~s) +
-      #scale_color_brewer(palette="Dark2", name="s") +
-      scale_x_continuous(breaks=pretty_breaks()) +
-      scale_y_continuous(breaks=pretty_breaks()) + guides(alpha="none") +
-      labs(title="B-values over time, Bottleneck", x="Generation", y="B") +
-      theme(axis.title=element_text(size=16), 
-            axis.text=element_text(size=12), 
-            axis.text.x=element_text(size=12),
-            legend.text=element_text(size=16),
-            legend.title=element_text(size=16),
-            legend.position="bottom")
-save_plot("B_gen_s.png", p, base_height=8, base_width=10)
 ```
