--- a/tools/Rmd/build_lookup.Rmd
+++ b/tools/Rmd/build_lookup.Rmd
@@ -19,7 +19,7 @@ library(bigsnpr) # for seq_log
 library(data.table)
 library(cowplot)
 
-knitr::opts_knit$set(root.dir="~/Data/momentspp/paper_1/strong_selection/")
+knitr::opts_knit$set(root.dir="~/Data/momentspp/paper_1/2_epoch_expansion/")
 ```
 
 # Creating folders and files
@@ -239,6 +239,7 @@ Collects lookup table with Hr values on the parameter grid
 
 ```{r, lookup, include=F, eval=T, results=F, message=F, warning=F}
 
+# setwd("ne_bar")
 params <- fread("params.csv")
 n_models <- nrow(params)
 
@@ -289,10 +290,10 @@ for(i in 1:length(lookup_r)) {
 lookup_hl <- cbind.data.frame(params, hls)
 lookup_hr <- cbind.data.frame(params, hrs)
 lookup_tbl <- pivot_longer(lookup_hr, cols=as.character(sampling_times),
-                       names_to="Generation", values_to="Hr")
+                           names_to="Generation", values_to="Hr")
 lookup_tbl$Hr <- as.numeric(lookup_tbl$Hr)
 lookup_tbl_hl <- pivot_longer(lookup_hl, cols=as.character(sampling_times),
-                       names_to="Generation", values_to="Hl")
+                              names_to="Generation", values_to="Hl")
 lookup_tbl$Hl <- as.numeric(lookup_tbl_hl$Hl)
 lookup_tbl$Generation <- as.numeric(lookup_tbl$Generation)
 
@@ -329,95 +330,7 @@ lookup_tbl$piN_pi0 <- lookup_tbl$Hl / lookup_tbl$pi0
 lookup_tbl$piN_piS <- lookup_tbl$Hl / lookup_tbl$Hr
 
 # when in ne_bar_ss, equivalent generation in temporal model
-#lookup_tbl$Generation <- rep(sampling_times, nrow(lookup_tbl) / length(sampling_times)) 
+lookup_tbl$Generation <- rep(sampling_times, nrow(lookup_tbl) / length(sampling_times)) 
 
 fwrite(lookup_tbl, "lookup_tbl.csv.gz", compress="gzip") 
-```
-
-```{r, vizualization, include=F, eval=T, results=F, message=F, warning=F}
-
-lookup_tbl <- fread("lookup_tbl.csv.gz")
-scaleFUN <- function(x) sprintf("%.3f", x)
-
-r_vals <- unique(lookup_tbl$r)
-p1 <- ggplot(data=filter(lookup_tbl, s==-1e-3, r %in% r_vals),
-             aes(x=Generation, y=B^1000, color=as.factor(r))) + 
-      theme_classic() + geom_line(linewidth=1.25) + facet_wrap(~Model) +
-      scale_x_continuous(breaks=pretty_breaks()) +
-      scale_y_continuous(breaks=pretty_breaks(), labels=scaleFUN) +
-      labs(title=NULL, x=NULL, y="B (s=-1e-3)") +
-        theme(axis.title=element_text(size=16), 
-              axis.text=element_text(size=12), 
-              axis.text.x=element_blank(), 
-              axis.text.y=element_text(size=12),
-              legend.position="none")
-  
-p2 <- ggplot(data=filter(lookup_tbl, s==-1e-4, r %in% r_vals),
-             aes(x=Generation, y=B^1000, color=as.factor(r))) + 
-      theme_classic() + geom_line(linewidth=1.25) + facet_wrap(~Model) +
-      scale_x_continuous(breaks=pretty_breaks()) +
-      scale_y_continuous(breaks=pretty_breaks(), labels=scaleFUN) +
-      labs(title=NULL, x=NULL, y="B (s=-1e-4)") +
-      theme(axis.title=element_text(size=16), 
-            axis.text=element_text(size=12), 
-            axis.text.x=element_blank(), 
-            axis.text.y=element_text(size=12),
-            legend.position="none")
-
-p3 <- ggplot(data=filter(lookup_tbl, s==-1e-5, r %in% r_vals),
-             aes(x=Generation, y=B^1000, color=as.factor(r))) + 
-      theme_classic() + geom_line(linewidth=1.25) + facet_wrap(~Model) +
-      scale_x_continuous(breaks=pretty_breaks()) +
-      scale_y_continuous(breaks=pretty_breaks(), labels=scaleFUN) +
-      labs(title=NULL, x="Generations since size change", y="B (s=-1e-5)") +
-      theme(axis.title=element_text(size=16), 
-            axis.text=element_text(size=12), 
-            axis.text.x=element_text(size=12), 
-            axis.text.y=element_text(size=12),
-            legend.position="bottom") +
-      guides(color=guide_legend(title="r"))
-
-  
-cp <- plot_grid(p1, p2, p3, ncol=1, rel_heights=c(1, 1, 1.35), align='v')
-cp
-save_plot("two-locus_time.pdf", cp, base_height=12, base_width=14)
-
-p1 <- ggplot(data=filter(lookup_tbl, s==-1e-3, r==1e-8),
-             aes(x=Generation, y=Hl)) + 
-      theme_bw() + geom_line(linewidth=1.25) + 
-      scale_x_continuous(breaks=pretty_breaks()) +
-      scale_y_continuous(breaks=pretty_breaks()) +
-      labs(title="Human-like history", x=NULL, y="Hl (s=-1e-3)") +
-        theme(axis.title=element_text(size=16), 
-              axis.text=element_text(size=12), 
-              axis.text.x=element_blank(), 
-              axis.text.y=element_text(size=12),
-              legend.position="none")
-
-p2 <- ggplot(data=filter(lookup_tbl, s==-1e-4, r==1e-8),
-             aes(x=Generation, y=Hl)) + 
-      theme_bw() + geom_line(linewidth=1.25) + 
-      scale_x_continuous(breaks=pretty_breaks()) +
-      scale_y_continuous(breaks=pretty_breaks()) +
-      labs(title=NULL, x=NULL, y="Hl (s=-1e-4)") +
-        theme(axis.title=element_text(size=16), 
-              axis.text=element_text(size=12), 
-              axis.text.x=element_blank(), 
-              axis.text.y=element_text(size=12),
-              legend.position="none")
-
-p3 <- ggplot(data=filter(lookup_tbl, s==-1e-5, r==1e-8),
-             aes(x=Generation, y=Hl)) + 
-      theme_bw() + geom_line(linewidth=1.25) + 
-      scale_x_continuous(breaks=pretty_breaks()) +
-      scale_y_continuous(breaks=pretty_breaks()) +
-      labs(title=NULL, x="Generations", y="Hl (s=-1e-5)") +
-        theme(axis.title=element_text(size=16), 
-              axis.text=element_text(size=12), 
-              axis.text.x=element_text(size=12), 
-              axis.text.y=element_text(size=12),
-              legend.position="bottom")
-
-cp <- plot_grid(p1, p2, p3, ncol=1, rel_heights=c(1, 1, 1.35), align='v')
-cp
 ```
